<resources xmlns:tools="http://schemas.android.com/tools" tools:shrinkMode="strict">
    <string name="app_name">gyankunj</string>
    <string name="learn_from_the_best">Learn from the best</string>
    <string name="get_the_best_course_from_the_world_s">Get the best course from the world,s</string>
    <string name="best_teachers">best teachers</string>
    <string name="download_and_learn">Download and learn anytime</string>
    <string name="explore_a_range_of_topic">Explore a range of topic android:textSize=</string>
    <string name="skip">Skip</string>
    <string name="sign_in">Sign in</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_one">Create one</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="forgot_password_">Forgot Password</string>
    <string name="enter_your_mobile_number_so_we_can_send_you_a_verification_code">Enter your mobile number so we can send you a verification code</string>
    <string name="next">Next</string>
    <string name="verification">Verification</string>
    <string name="the_verification_code_was_sent_to_the_phone_number">The verification code was sent to the phone number</string>
    <string name="_977">+977</string>
    <string name="please_enter_the_code">. Please enter the code:</string>
    <string name="resend_verification_code">Resend verification code</string>
    <string name="new_passsword">New Passsword</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="your_password_has_been_changed">Your password has been changed</string>
    <string name="sucessfully">sucessfully</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_your_phone_number_to_get_started">Enter your phone number to get started</string>
    <string name="by_clicking_the_sign_up_button_you_have_agreed">By clicking the sign up button, you have agreed </string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="set_password">Set password</string>
    <string name="welcome">Welcome!</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="noticeboard">Noticeboard</string>
    <string name="all_the_news">All the news and events</string>
    <string name="will_be_listed_here">will be listed here</string>
    <string name="my_courses">My courses</string>
    <string name="mathematics">Mathematics</string>
    <string name="chemistry">Chemistry</string>
    <string name="physics">Physics</string>
    <string name="biology">Biology</string>
    <string name="computer">Computer</string>
    <string name="management">Management</string>
    <string name="take_quiz">Take a quiz</string>
    <string name="refer_and_earn">Refer and earn</string>
    <string name="share_this_app_to_your_friends_to_get_exciting_gifts">Share this app to your friends to get exciting gifts</string>
    <string name="practice_set">Practice set</string>
    <string name="set_1">Set 1</string>
    <string name="_8_topic">8 Topic</string>
    <string name="_200_questions">200 questions</string>
    <string name="questions">questions</string>
    <string name="topic">topic</string>
    <string name="you_have_been_registered">You have been registered</string>
    <string name="the">the</string>
    <string name="chapters">Chapters</string>
    <string name="chapter">Chapter</string>
    <string name="popular_videos">Popular videos</string>
    <string name="chapter_1">Chapter 1</string>
    <string name="introduction_to_mechanics">Introduction to mechanics</string>
    <string name="author_bijay">Author: Bijay Bastakoti</string>
    <string name="rating">Rating:</string>
    <string name="topics">Topics</string>


    <string name="facebook_app_id">754766491928003</string>
    <string name="logout">Logout</string>
    <string name="test_your_knowledge_take_on_quiz_from_various_categories">Test your knowledge.Take on quiz from various categories</string>
    <string name="quiz">Quiz</string>
    <string name="please_select_subject_you_want_to_take_quiz">Please select subject you want to take quiz</string>
    <string name="random_quiz">Random quiz</string>
    <string name="test_your_with_knowledge_take_on_quiz_from_random_subjects">Test your with knowledge. Take on quiz from random subjects</string>
    <string name="qustion_1_of_20">Qustion 1 of 20</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="which_one_of_these_don_t_affect_the_expossure_of_a_digital_photography">Which one of these don\'t affect the expossure of a digital photography?</string>
    <string name="iso">ISO</string>
    <string name="raw">RAW</string>
    <string name="aperture">Aperture</string>
    <string name="shutter_speed">Shutter Speed</string>
    <string name="next_questions">Next questions</string>
    <string name="previous">Previous</string>
    <string name="question">Question</string>
    <string name="_20">20</string>
    <string name="of_20">of 20</string>
    <string name="congratulations">Congratulations</string>
    <string name="you_have_completed">You have completed</string>
    <string name="random_quiz1">random quiz</string>
    <string name="score">Score:</string>
    <string name="_10">10</string>
    <string name="_20slace">/20</string>
    <string name="check_answers">Check answers</string>
    <string name="play_again">Play again</string>
    <string name="physical_quantities">Physical quantities</string>
    <string name="by_kumar_jha">By Kumar Jha</string>
    <string name="info">INFO</string>
    <string name="lessons">LESSONS</string>
    <string name="formulas">FORMULAS</string>
    <string name="_12">12</string>
    <string name="lessons_">Lessons</string>
    <string name="_8">8</string>
    <string name="exercises">Exercises</string>
    <string name="_40">40</string>
    <string name="mcr">MCR</string>
    <string name="what_will_you_learn">What will you learn?</string>
    <string name="duis_rhoncus_dui_venenatis_consequat_porttitor_etiam_aliquet_congue">Duis rhoncus dui venenatis consequat porttitor.Etiam aliquet congue</string>
    <string name="lessons_1">Lesson 1</string>
    <string name="dimensions">Dimensions</string>
    <string name="mark_as_completed">Mark as completed</string>
    <string name="_18">18</string>
    <string name="of_27">of 27 lessons completed</string>
    <string name="_78">78%</string>
    <string name="continue_reading">Continue Reading</string>
    <string name="kumar_jha">Kumar Jha</string>
    <string name="teacher">Teacher</string>
    <string name="bio">BIO</string>
    <string name="courses">Courses</string>
    <string name="about_jena_petterson">About Jena Petterson</string>
    <string name="square">Square</string>
    <string name="l">l</string>
    <string name="_1_area_a">1. Area(A)=</string>
    <string name="_2_perimeter">2. Perimeter(P)=</string>
    <string name="do_you_want_to_exit_quiz">Do you want to exit quiz?</string>
    <string name="no">No</string>
    <string name="yes_exit_anyway">Yes, exit anyway</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="save">Save</string>
    <string name="view_full_notice">View full notice</string>
    <string name="yesterday">Yesterday</string>
    <string name="class_11_exam_has_been_postponed_for_4_months">Class 11 exam has been postponed for 4 months</string>
    <string name="the_government_s_recent_decision_to_not_hold_the_see_for_grade_10_has_raised_questions_and_concerns_over_the_examination_for_grade_11_and_12">The government\'s recent decision to not hold the SEE for grade 10 has raised questions and concerns over the examination for grade 11 and 12.</string>
    <string name="email_notification">Email notification</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="version">Version</string>
</resources>