<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:shrinkMode="strict">

    <group
        android:checkableBehavior="single" android:id="@+id/general">



   <item android:id="@+id/profile"
       android:title="@string/profile"
       android:icon="@drawable/ic_profile"/>

    <item android:id="@+id/invite_friends"
        android:title="@string/invite_friends"
        android:icon="@drawable/ic_invitefriends"/>

    <item android:id="@+id/help"
        android:title="@string/help"
        android:icon="@drawable/ic_help"/>

    <item android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"/>
    </group>

<!--    <group android:id="@+id/logout_group" >-->
<!--        <item android:id="@+id/logout"-->
<!--            android:menuCategory="container"-->
<!--            android:icon="@drawable/logout"-->
<!--            android:title="Logout"/>-->
<!--    </group>-->
</menu>
