<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:shrinkMode="strict"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.gyankunj.ui.home.mycourse.chapter.topics.info.InfoViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.gyankunj.ui.home.mycourse.chapter.topics.info.InfoFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView2"
            android:layout_width="0dp"
            android:layout_height="@dimen/chapter_card_height"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:cardElevation="2dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:background="@drawable/card_background_layout"
                android:elevation="10dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView57"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/_18"
                    android:textSize="@dimen/small_text_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView56"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/of_27"
                    android:textSize="@dimen/small_text_size"
                    app:layout_constraintBottom_toBottomOf="@+id/textView57"
                    app:layout_constraintStart_toEndOf="@+id/textView57"
                    app:layout_constraintTop_toTopOf="@+id/textView57" />

                <TextView
                    android:id="@+id/textView58"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/_78"
                    android:textSize="@dimen/small_text_size"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textView56"
                    app:layout_constraintEnd_toEndOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/fade_line_drawable"
                    app:layout_constraintEnd_toEndOf="@+id/textView58"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView57"
                    app:layout_constraintTop_toBottomOf="@+id/textView56">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="60dp"
                        android:src="@drawable/onboarding_button"
                        app:layout_constraintEnd_toEndOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_continue_reading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/onboarding_button"
            android:elevation="10dp"
            android:fontFamily="@font/poppins_regular"
            android:foreground="?attr/selectableItemBackground"
            android:padding="12dp"
            android:text="@string/continue_reading"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/cv_exercise"
            app:layout_constraintEnd_toEndOf="@+id/materialCardView2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/materialCardView2"
            app:layout_constraintTop_toTopOf="@+id/materialCardView2"
            app:layout_constraintVertical_bias="0.78" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_lessons"
            android:layout_width="0dp"
            android:layout_height="@dimen/chapter_card_height"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toStartOf="@+id/cv_exercise"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:background="@drawable/card_focused_effect_color"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_lessons_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunitosans_bold"
                    android:text="@string/_12"
                    android:textColor="@color/onboarding_button_color"
                    android:textSize="27sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_lessons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/lessons_"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_lessons_no"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_exercise"
            android:layout_width="0dp"
            android:layout_height="@dimen/chapter_card_height"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toStartOf="@+id/cv_mcr"
            app:layout_constraintStart_toEndOf="@+id/cv_lessons"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_exercise_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunitosans_bold"
                    android:text="@string/_8"
                    android:textColor="@color/onboarding_button_color"
                    android:textSize="27sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_exercise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/exercises"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_exercise_no"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_mcr"
            android:layout_width="0dp"
            android:layout_height="@dimen/chapter_card_height"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cv_exercise"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_mcr_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunitosans_bold"
                    android:text="@string/_40"
                    android:textColor="@color/onboarding_button_color"
                    android:textSize="27sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_mcr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/mcr"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_mcr_no"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/textView59"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/what_will_you_learn"
            android:textColor="@color/text_color"
            android:textSize="@dimen/medium_text_size"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintStart_toStartOf="@+id/cv_lessons"
            app:layout_constraintTop_toBottomOf="@+id/cv_lessons" />

        <TextView
            android:id="@+id/textView60"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/duis_rhoncus_dui_venenatis_consequat_porttitor_etiam_aliquet_congue"
            android:textColor="@color/fade_text_color"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView59"
            app:layout_constraintTop_toBottomOf="@+id/textView59"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
